# opensr-service

./: README.md  client-gui.ipynb  pyproject.toml
src/opensr_service/: __init__.py  cli.py  processes.py  service.py
