#  Copyright (c) 2025 by the Eozilla team and contributors
#  Permissions are hereby granted under the terms of the Apache 2.0 License:
#  https://opensource.org/license/apache-2-0.

[project]
name = "opensr-service"
version = "0.0.0"
description = "ESA OpenSR Service"
readme = "README.md"
authors = [
  {name = "Norman Fomferra (Brockmann Consult GmbH)"},
]
keywords = [
  "eo",
  "esa",
  "data processing",
  "ogc",
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
requires-python = ">=3.10"

[project.scripts]
opensr_service = "opensr_service.cli:cli"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
# Actual dependencies
cuiman = "*"
procodile = "*"
wraptile = "*"
ipyleaflet = "*"
# Dev CI
pytest = "*"
pytest-cov = "*"
ruff = "*"
isort = "*"
mypy = "*"
# Dev Notebooks
jupyterlab = "*"
# Dev IDE integration
pixi-pycharm = "*"

[tool.pixi.pypi-dependencies]
opensr_service = { path = ".", editable = true }

[tool.isort]
skip = [".idea", ".github", ".pixi", "htmlcov", "site"]
profile = "black"
line_length = 88
known_first_party = ["opensr_service"]

[build-system]
requires = ["hatch"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src/opensr_service/**/*",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
